// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextField Default 1`] = `
<div
  className="sc-eNQAEJ lhLkZ"
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <div
    className="sc-ckVGcZ jnUSGE"
  >
    <span
      className="sc-jKJlTe eFYypy"
    >
      Username
    </span>
  </div>
  <input
    className="sc-dxgOiQ iyMjck"
    id={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <div
    className="sc-ckVGcZ jnUSGE"
  >
    <span
      className="sc-jKJlTe eFYypy"
    >
      $
    </span>
  </div>
</div>
`;

exports[`Storyshots TextField With Currency formatting 1`] = `
Array [
  <div
    className="sc-eNQAEJ lhLkZ"
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-ckVGcZ jnUSGE"
    >
      <span
        className="sc-jKJlTe eFYypy"
      >
        $
      </span>
    </div>
    <input
      className="sc-dxgOiQ iyMjck"
      id={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="10.00"
    />
  </div>,
  <div
    className="sc-bwzfXH eSFIdE"
  >
    <p
      className="sc-bxivhb fhwEDr"
    >
      <span
        className="sc-htpNat eGtcyu"
      >
        <span
          className="sc-htpNat bCblnl"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat eGtcyu"
        >
          The reported value of this field is: 10
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Feedback 1`] = `
Array [
  <div
    className="sc-eNQAEJ eTWvPu"
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-ckVGcZ jnUSGE"
    >
      <span
        className="sc-jKJlTe eFYypy"
      >
        Username
      </span>
    </div>
    <input
      className="sc-dxgOiQ iyMjck"
      id={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <div
      className="sc-ckVGcZ jnUSGE"
    >
      <span
        className="sc-jKJlTe eFYypy"
      >
        $
      </span>
    </div>
  </div>,
  <div
    className="sc-bwzfXH eSFIdE"
  >
    <p
      className="sc-bxivhb eEGBVx"
    >
      <span
        className="sc-htpNat eGtcyu"
      >
        <span
          className="sc-htpNat bCblnl"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat eGtcyu"
        >
          This is a feedback message
        </span>
      </span>
    </p>
  </div>,
]
`;
